overflow-fixed

--- a/mission1/style.css
+++ b/mission1/style.css
@@ -1,30 +1,36 @@
-html,body{
-
-    height: 100%;
+body{
+    margin: 0;
     width: 100%;
-    margin: 0 auto;
+    height: 100%;
     background-color: #FFFFFF;
+    
 }
+
+
 
 /* header */
 .wrap{
+
     height: 70px;
     width: 100%;    
     background-color: #FFFFFF;
+   
+    position: relative;
     display: flex;
     justify-content: space-between;
+    
 }
 
 .wrap a{
-    margin-top: 10px;
-    margin-left: 200px;
+    
     cursor: pointer;
-   
+    position: absolute;
+    top: 10px;
+    left: 200px;
   
 }
 
 .loginBtn{
-
     cursor: pointer;
     position: absolute;
     border:none;
@@ -42,26 +48,29 @@ html,body{
 
 /* main */
 
-.card{
+main{
+    width: 100%;
+    background-color: skyblue;  
+    
 
+}
+ 
+.card{
     background-color: skyblue;
-    display: flex;
-    justify-content: center;
-    align-items:end;
-    gap: 100px;
+    position: relative;
     height: 540px;
     width: 100%;
 }
 
-.box{
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.card .box{
+    position: absolute;
+    
+    top: 170px;
+    left: 360px;
 }
 
+
 .box h1{
-    margin: 0;
     font-weight: 700;
     font-size: 40px;
     line-height: 56px;
@@ -69,8 +78,6 @@ html,body{
 }
 
 .box button{
-    margin-bottom: 80px;
-    padding: 0;
     width: 355px;
     height: 56px;
     border-radius: 40px;
@@ -86,26 +93,33 @@ html,body{
 .card img{
     width: 996px;
     height: 447px;
-}
+    margin-top: 93px;
+    margin-left: 680px;
 
+}
 
 .card2{
    
     background-color: #FFFFFF;
     height: 720px;
-    display: flex;
-    justify-content: center;
+    position: relative;
 }
 
 .card2 .confirmBox{
-    
+   
+    position: absolute;
+    top: 137.5px;
+    left: 360px;
     display: flex;
     align-items: center;
 }
 
+
 .confirmBox .specific{
-   margin-left: 50px;
+   padding-left: 50px;
    text-align: left;
+   
+
 }
 
 .specific h1{
@@ -123,27 +137,27 @@ html,body{
 }
 
 .card3{
-
     background-color: #FFFFFF;
     height: 720px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    
+    position: relative;
 }
-.card3 .specific2{
-    margin-right: 50px;
 
+.card3 .searchBox{
+    position: absolute;
+    top: 138px;
+    left: 591px;
+    display: flex;
+    align-items: center;
 }
-.card3 img{
-    width: 588px;
-    height: 444px;
-}
+
 
 
 .searchBox .specific2{
+   
     padding-right: 50px;
     text-align: right;
+
+
 }
 
 .specific2 h1{
@@ -160,30 +174,24 @@ html,body{
     color: #374151;
 }
 
+
 .card4{
     background-color: #FFFFFF;
     height: 720px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
 }
 
-.card4 img{
-    width: 588px;
-    height: 444px;
-}
 .card4 .registerBox{
-    width: 100%;
-    
+    position: absolute;
     top: 138px;
     left: 360px;
-   
+    display: flex;
     align-items: center;
 }
 
 
-.card4 .specific3{
-    margin-left: 50px;
+.registerBox .specific3{
+    padding-left: 50px;
 }
 
 .specific3 h2{
@@ -200,11 +208,17 @@ html,body{
     color: #374151;
 }
 
+
+
 .card5{
-    display: flex;
     height: 540px;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+}
+
+.card5 .pandaTrade{
+    position: absolute;
+    top: 214px;
+    left: 360px;
     
 }
 
@@ -213,30 +227,27 @@ html,body{
     font-size: 40px;
     line-height: 56px;
     color: #374151;
-    margin: 0;
+
 }
 
 .card5 img{
-    margin-left: 50px;
+    display: inline-block;
+    margin-left: 680px;
     height: 540px;
 }
 
 footer{
+    
     height: 160px;
     background-color: #111827;
+    position: relative;
+   
 }
 
 
 footer .tag{
-    height: 100%;
-    align-items: center;
     display: flex;
     justify-content: space-around;
-    
-}
-
-.tag p{
-    margin: 0;
 }
 
 .tag .codeit{
@@ -253,8 +264,11 @@ footer .tag{
     color: #E5E7EB;
 }
 
-.social a{
+.social{
+
     width: 116px;
-    margin-right: 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
